--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
+
 {
-  "name": "geekgazette-server",
-  "version": "1.0.0",
-  "description": "Server side for the geek gazzete blog site",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "@kiptanuiBoaz",
-  "license": "ISC",
   "dependencies": {
-    "mongoose": "^7.0.0"
-  }
+    "-": "^0.0.1",
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "g": "^2.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.4",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
+  },
+
+
+ "name": "geekgazette-server",
+ "description": "Server side for the geek gazzete blog site",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server",
+    "dev": "nodemon server"
+  },
+  "keywords": [],
+  "author": "kiptanuiBoaz",
+  "license": "ISC"
 }
