--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "-": "^0.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/redux": "^3.6.0",
+    "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
